[package]
name = "wslpath"
version = "0.1.0"
authors = ["Khyber Sen <kkysen@gmail.com>"]
edition = "2018"
description = "Convert WSL Linux paths to Windows paths like wslpath, but in a library."
license = "MIT"
repository = "https://github.com/kkysen/wslpath"
homepage = "https://github.com/kkysen/wslpath/blob/master/README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.0"
